
24/06/2002 (Jir)
- SKILL_DISARM can help players from hitting already-found traps.
- SKILL_HEALTH, SKILL_DIG
[P] SKILL_DODGE
[H] Hardness of walls are reverted to the original.
[B] anti_magic and antimagic :)
[B] 'Travak' was sling-shot and mass-produced.

24/06/2002
[C]- .mangrc changed to .tomenetrc
[C]- Chardump ability in the char screen




** [B] stands for Bugfix.
** [C] stands for Client changes.
** [H] stands for Hack and rebalancement :)
** [P] stands for Porting from ToME.

=============================================================================
concisely: what's hot now?

- multiple-dungeons stuff
  + we should preserve level_up_y etc. for manually-added dungeons/towers.
- quest system
- skill system
  + SKILL_CLIMB
  + spell_info should be redone
  + bare-handed combat?
- LUA hook
- csfunc
- alignment (let's wait for EE :)
- item stacking

=============================================================================
below this line are the unfixed bugs known:

[B] House doors still seem to crash sometimes. (door even vanishes??)
[B] wpos display hides wound states(eg.'Deep Gash')
[B] ever-charging arts (eg.star)
[B] 'You hit it.' etc in town (99% problem in zcave.m_idx)
    sometimes, monsters attack the player from nowhere.. prolly same root?
	* this only happens when rebooting the server and caves lost.
[B] some monsters become 'immune' to spell attacks.
[B][C] chat-history contains lines with 'mindcrafter'. 
[B] p_ptr->furry, lol
[B] 'Ring of Polymorphing of'.
[B] cannot 'run' near the outer permawall (run_test)
[B] mon_vis, obj_vis etc. are messed while the player is off.
[B] option '-r' puts the server into infinite-loop (genwild)
[B] GCU client flickers like hell. (fix_player)
[B] GCU client cannot handle the cursor very well.
[B] some ivents are not told to the players even when within the sight.
[B] white '@' sometimes appear on the screen.
[B] Yeek seems to receive the best store prices.

*below are bugs repoorted but not confirmed*