@@ -700,7 +700,7 @@
  * TODO: DEFAULT_RADIUS_SPELL should be based on skills!
  */
 #define DEFAULT_RADIUS			18
-#define DEFAULT_RADIUS_SPELL(p_ptr)	(DEFAULT_RADIUS - 5 + p_ptr->lev / 5)
+//#define DEFAULT_RADIUS_SPELL(p_ptr)	(DEFAULT_RADIUS - 5 + p_ptr->lev / 5)
 #define DEFAULT_RADIUS_DEV(p_ptr)	(DEFAULT_RADIUS - 5 + p_ptr->skill_dev / 8)
 /* NOTE: skill_dev is already affected by SKILL_DEVICE
  * get_skill_scale(p_ptr, SKILL_DEVICE, 100) */
