@@ -915,7 +915,7 @@ extern bool cure_critical_wounds_proj(int Ind, int dir);
 extern bool heal_other_proj(int Ind, int dir);
 extern bool door_creation(int Ind);
 extern bool trap_creation(int Ind, int mod, int rad);
-extern bool destroy_doors_touch(int Ind);
+extern bool destroy_doors_touch(int Ind, int rad);
 extern bool sleep_monsters_touch(int Ind);
 extern bool create_artifact(int Ind);
 extern bool create_artifact_aux(int Ind, int item);
